# Advanced-C-NIT-Course

./: .gitignore  README.md
lab00/task1/: .gitignore  Makefile  hello.c
lab01/: CMakeLists.txt
lab01/example1/: example1.c
lab01/example2/: example2.c
lab01/example3/: example3.c
lab01/task1/: program.c
lab02/exercise/: CMakeLists.txt  program.c  task1.c  task2.c
lab03/: CMakeLists.txt
lab03/task1/: CMakeLists.txt
lab03/task1/p1/: file.h  file1.c  file2.c
lab03/task1/p2/: extern.c  file1.c  file2.c
lab03/task1/p3/: extern.c  file2.c
lab03/task1/p4/: extern.c  file1.c  file2.c
lab03/task2/: object_lifetime_e1.c
lab03/task3/: uninitialized.c
lab03/task4/: const_parameter.c
lab03/task5/: program.c
lab03/task6/: fibonacci.c  fibonacci.h  functions.c
lab03/task7/: program.c
lab03/task8/: e_functions.c  functionExamples.S
lab04/: CMakeLists.txt
lab04/task1/: program.c
lab04/task2/: bmp.c  bmp.h  e_bitmap.c  imageProcessing.c  imageProcessing.h
lab04_1/: CMakeLists.txt
lab04_1/task1/: str_example_1.c
lab04_1/task2/: str_example_2.c
lab04_1/task3/: align1.c
lab04_1/task4/: align2.c  align2A.c  align2B.c
lab05/: .gitignore  Makefile  cipher.c  cipher_dynamic  cipher_static
lab05/ROT13/: rot13.c  rot13.h
lab05/caesar_cipher/: caesar.c  caesar.h
lab06/: CMakeLists.txt
lab06/task1/: circular_buffer.c  circular_buffer.h  main.c
lab07/exercise/: list_of_broken_rules.txt  my_print.c  my_print.h  program.c
lab07/ti_tools/include/: c60asm.i
lab08/: CMakeLists.txt  main.c  stack.c  stack.h
