cmake_minimum_required(VERSION 3.16)
project(lab04_1 C)

add_compile_options("-ggdb3")

add_executable(task1 task1/str_example_1.c)
add_executable(task2 task2/str_example_2.c)
add_executable(task3 task3/align1.c)
add_executable(task4 task4/align2.c)
add_executable(task4A task4/align2A.c)
add_executable(task4B task4/align2B.c)
